--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.17.1"
+    "@vercel/kv": "^3.0.0",
+    "astro": "^5.17.1",
+    "stripe": "^20.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^25.2.3"
   }
 }
