--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,27 @@
 {
   "extends": "astro/tsconfigs/strict",
+
   "compilerOptions": {
     "baseUrl": ".",
+
+    /* Nodig voor Node APIs zoals process, fs, path */
+    "types": ["node"],
+
+    /* Handige imports */
     "paths": {
       "@layouts/*": ["src/layouts/*"],
       "@components/*": ["src/components/*"]
     }
   },
-  "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"]
+
+  /* Astro + alle bestanden meenemen */
+  "include": [
+    ".astro/types.d.ts",
+    "**/*"
+  ],
+
+  /* Build output uitsluiten */
+  "exclude": [
+    "dist"
+  ]
 }
