--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^9.0.4",
     "@vercel/kv": "^3.0.0",
     "astro": "^5.17.1",
     "stripe": "^20.3.1"
