--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,14 @@
 {
   "extends": "astro/tsconfigs/strict",
-
   "compilerOptions": {
     "baseUrl": ".",
-
-    /* Nodig voor Node APIs zoals process, fs, path */
     "types": ["node"],
-
-    /* Handige imports */
     "paths": {
       "@layouts/*": ["src/layouts/*"],
-      "@components/*": ["src/components/*"]
+      "@components/*": ["src/components/*"],
+      "@lib/*": ["src/lib/*"]
     }
   },
-
-  /* Astro + alle bestanden meenemen */
-  "include": [
-    ".astro/types.d.ts",
-    "**/*"
-  ],
-
-  /* Build output uitsluiten */
-  "exclude": [
-    "dist"
-  ]
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist", "node_modules"]
 }
