--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.994.0",
     "@vercel/kv": "^3.0.0",
     "astro": "^5.17.1",
     "dotenv": "^17.3.1",
